app/javascripts/modules/_canteens.scss
@use "../responsive";
@use "../variables";

#content {
  #feedback_message {
    width: 100%;
    height: 5em;
  }
  #canteen-header {
    padding: 95px 0 35px;
    background-color: #fff;
    background-image: url("images/canteen.jpg");
    background-repeat: no-repeat;
    background-position: 50% 50%;

    h1 {
      display: flex;
      width: 100%;

      color: #fff;
      margin: 0;
      padding: 15px 25px;
      text-shadow: none;
      background-color: rgba(0, 0, 0, 0.8);

      > span {
        flex-grow: 1;
      }

      .fav {
        color: white;
        padding: 0 7px;
        border-radius: 20px;
        transition: all 0.3s ease-in-out;

        &:hover {
          color: #000;
          text-decoration: none;
          background-color: #ffffff;
          transition: all 0.3s ease-in-out;
        }
      }
    }

    @include responsive.media(tablet) {
      padding: 0;
      background-image: none;
    }

    @include responsive.media(mobile) {
      padding: 0;
      background-image: none;

      h1 {
        margin: 0;
        padding: 3px 4px;
        text-align: center;
      }
    }

    span.outoforder {
      color: variables.$alert-error;
    }
  }
}

.canteens_controller,
.menu_controller {
  .page-header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    h2 {
      @include responsive.media(handheld) {
        font-size: 18px;
        font-size: 1.8rem;
      }
    }

    a.next,
    a.prev {
      display: block;
      margin: 0;
      padding: 10px;

      @include responsive.media(handheld) {
        margin: 0;
      }

      &::before {
        content: "";

        width: 14px;
        height: 14px;
        display: block;
        transform: rotate(-45deg);

        transition: 0.2s ease-in-out;
      }

      &.next {
        order: 2;

        &::before {
          float: right;
          border-bottom: 3px solid #ccc;
          border-right: 3px solid #ccc;
        }
      }

      &.prev {
        order: -1;

        &::before {
          float: left;
          border-top: 3px solid #ccc;
          border-left: 3px solid #ccc;
        }
      }

      &:hover::before {
        border-color: #333;
        background-color: rgba(0, 0, 0, 0.05);
      }
    }
  }

  ul.categories {
    margin: 0;
    padding: 0;
    list-style: none;

    > li {
      display: flex;
      align-items: baseline;
      gap: 1em;

      border-top: 1px solid #e5e5e5;

      @include responsive.media(mobile) {
        display: block;
        padding: 0 0.6em;
      }

      &:first-child {
        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05) inset;
      }

      > h3 {
        width: 140px;
        flex-shrink: 0;

        font-size: 13px;
        font-size: 1.3rem;
        font-weight: bold;
        text-align: right;

        margin: 0.5em 0;
        padding: 0;
        padding-left: 10px;

        @include responsive.media(mobile) {
          width: 100%;
          text-align: left;
        }
      }

      > p,
      > ul > li {
        margin: 1em 0;
        padding: 0;
      }

      > ul {
        list-style: none;
        padding: 0;

        > li {
          padding-right: 10px;
        }
      }
    }
  }

  ul.meals {
    width: 100%;

    list-style: none;
    padding: 0;

    > li {
      padding-right: 10px;

      &:last-child {
        border: none;
      }

      > p {
        margin: 0.5em 0;
      }

      .info {
        display: flex;
        justify-content: space-between;
        gap: 0.5em;

        color: #888;
        font-size: 0.85em;

        transition: color 0.2s ease-in-out;

        @include responsive.media(mobile) {
          flex-direction: column;
        }

        > ul {
          list-style: none;

          margin: 0;
          padding: 0;
        }

        > ul.notes {
          flex-grow: 2;

          > li {
            display: inline-block;
            margin: 0 0.5em 0 0;

            &:before {
              content: "~";
            }
          }
        }

        > ul.prices {
          flex-grow: 1;

          display: flex;
          flex-direction: row;
          justify-content: flex-end;
          gap: 2em;

          > li {
            display: flex;
            flex-direction: column;

            > span {
              display: block;
              text-align: right;
            }
          }
        }
      }

      &:hover {
        .info {
          color: #222;
        }
      }
    }
  }

  .content .map {
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  }

  .status p {
    padding: 5px;
  }
}

